# Phidgets

./: .gitmodules  LICENSE  README.md
DumpInput/: CMakeLists.txt  PhidgetError.hpp  main.cpp
FaderPerformanceTest/: CMakeLists.txt  VirtualmoniumAdapter.cfg
FaderPerformanceTest/Scripts/: analyse_report.py
FaderPerformanceTest/Source/: FaderMessageQueue.cpp  FaderMessageQueue.hpp  PhidgetError.hpp  UdpConnection.hpp  VoltageRatioInput.cpp  VoltageRatioInput.hpp  main.cpp
HelloWorld/: CMakeLists.txt
HelloWorld/ManagerExample/: Makefile
HelloWorld/VoltageRatioInputExample/: VoltageRatioInput_Example.c
Phidgets/: CMakeLists.txt  phidget22.c  phidget22.h
PhidgetsToOSC/: CMakeLists.txt  channels.csv  fader_id.txt  main.c
UdpClient/: CMakeLists.txt  main.cpp
VirtualmoniumAdapter/: CMakeLists.txt  VirtualmoniumAdapter.cfg
VirtualmoniumAdapter/Source/: Configuration.cpp  Configuration.hpp  FaderMessageQueue.cpp  FaderMessageQueue.hpp  PhidgetError.cpp  UdpConnection.cpp  Utilities.cpp  Utilities.hpp  main.cpp
doc/: Oppgavebeskrivelse.txt
